更新了商品详情页

--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -12,27 +12,27 @@
 
   <!-- Title  -->
   <!-- Favicon  -->
-  <link rel="icon" href="../../static/img/core-img/favicon.ico">
+  <link rel="icon" href="/img/core-img/favicon.ico">
 
   <!-- Document Title -->
   <title>Home</title>
 
   <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
-  <link rel="stylesheet" type="text/css" href="../../static/rs-plugin/css/settings.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/rs-plugin/css/settings.css" media="screen" />
   <!-- StyleSheets -->
-  <link rel="stylesheet" href="../../static/css/ionicons.min.css">
-  <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../static/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../../static/css/main.css">
-  <link rel="stylesheet" href="../../static/css/style.css">
-  <link rel="stylesheet" href="../../static/css/responsive.css">
-  <link href="/static/icofont/icofont.min.css" rel="stylesheet">
-  <link href="/static/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/ionicons.min.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/responsive.css">
+  <link href="/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
   <!-- Fonts Online -->
   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
   <!-- JavaScripts -->
-  <script src="../../static/js/vendors/modernizr.js"></script>
+  <script src="/js/vendors/modernizr.js"></script>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
@@ -59,7 +59,7 @@
       <div class="collapse navbar-collapse" id="nav-open-btn">
         <ul class="nav">
 
-          <div class="logo"> <a href="/"><img style="height: 60px; width: 60px" src="../../static/img/logo.png" alt="" ></a> </div>
+          <div class="logo"> <a href="/"><img style="height: 60px; width: 60px" src="/img/logo.png" alt="" ></a> </div>
           <div class="h2"style="margin-top: 20px">Snail Go</div>
 
         </ul>
@@ -132,7 +132,7 @@
       <ol class="breadcrumb">
         <li><a href="#">Home</a></li>
         <li><a href="#">Cell Phones & Accessories</a></li>
-        <li class="active">Power Smartphone 7s Silver 128GB/ Camera 7.5”</li>
+        <li class="active"><span class="tag" th:text="${goodsdetails[0].goodsName}"></span></li>
       </ol>
     </div>
   </div>
@@ -304,32 +304,27 @@
                     <article class="slider-item on-nav">
                       <div class="thumb-slider">
                         <ul class="slides">
-                          <li data-thumb="images/item-img-1-1.jpg"> <img src="../../static/images/item-img-1-1.jpg" alt="" > </li>
-                          <li data-thumb="images/item-img-1-2.jpg"> <img src="../../static/images/item-img-1-2.jpg" alt="" > </li>
-                          <li data-thumb="images/item-img-1-3.jpg"> <img src="../../static/images/item-img-1-3.jpg" alt="" > </li>
+                          <li th:data-thumb="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'"> <img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-1.jpg'" alt="Product Image"> </li>
+                          <li th:data-thumb="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-2.jpg'"> <img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-2.jpg'" alt="Product Image"> </li>
+                          <li th:data-thumb="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-3.jpg'"> <img th:src="'/goods_pics/'+${goodsdetails[0].goodsId}+'-pic-3.jpg'" alt="Product Image"> </li>
                         </ul>
                       </div>
                     </article>
                   </div>
                   <!-- Item Content -->
-                  <div class="col-xs-7"> <span class="tags">Smartphones</span>
-                    <h5>Power Smartphone 7s Silver 128GB/ Camera 7.5”</h5>
+                  <div class="col-xs-7"> <span class="tags" th:text="${goodsdetails[0].goodsTag}"></span>
+                    <h4 th:text="${goodsdetails[0].goodsName}"></h4>
                     <p class="rev"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <span class="margin-left-10">5 Review(s)</span></p>
                     <div class="row">
-                      <div class="col-sm-6"><span class="price">$480.00 </span></div>
+                      <div class="col-sm-6"><span class="price" th:text="'¥'+${goodsdetails[0].goodsPrice}"> </span></div>
                       <div class="col-sm-6">
-                        <p>Availability: <span class="in-stock">In stock</span></p>
+                        <p>库存 <span class="in-stock" th:text="${goodsdetails[0].goodsRemaning}"></span></p>
                       </div>
                     </div>
                     <!-- List Details -->
-                    <ul class="bullet-round-list">
-                      <li>Screen: 1920 x 1080 pixels</li>
-                      <li>Processor: 2.5 GHz None</li>
-                      <li>RAM: 8 GB</li>
-                      <li>Hard Drive: Flash memory solid state</li>
-                      <li>Graphics : Intel HD Graphics 520 Integrated</li>
-                      <li>Card Description: Integrated</li>
-                    </ul>
+                    <p>
+                      <span th:text="${goodsdetails[0].goodsDsp}"></span>
+                    </p>
                     <!-- Colors -->
                     <div class="row">
                       <div class="col-xs-5">
@@ -350,7 +345,7 @@
                     <div class="quinty">
                       <input type="number" value="01">
                     </div>
-                    <a href="#." class="btn-round"><i class="icon-basket-loaded margin-right-5"></i> Add to Cart</a> </div>
+                    <a href="#." class="btn-round"><i class="icon-basket-loaded margin-right-5"></i>加入购物车</a> </div>
                 </div>
               </div>
               
@@ -447,7 +442,7 @@
               <div class="item-slide-4 with-nav"> 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-1.jpg" alt="" >
+                  <article> <img class="img-responsive" src="/images/item-img-1-1.jpg" alt="" >
                     <!-- Content --> 
                     <span class="tag">Latop</span> <a href="#." class="tittle">Laptop Alienware 15 i7 Perfect For Playing Game</a> 
                     <!-- Reviews -->
@@ -457,7 +452,7 @@
                 </div>
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-2.jpg" alt="" > <span class="sale-tag">-25%</span>
+                  <article> <img class="img-responsive" src="/images/item-img-1-2.jpg" alt="" > <span class="sale-tag">-25%</span>
                     
                     <!-- Content --> 
                     <span class="tag">Tablets</span> <a href="#." class="tittle">Mp3 Sumergible Deportivo Slim Con 8GB</a> 
@@ -469,7 +464,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-3.jpg" alt="" >
+                  <article> <img class="img-responsive" src="/images/item-img-1-3.jpg" alt="" >
                     <!-- Content --> 
                     <span class="tag">Appliances</span> <a href="#." class="tittle">Reloj Inteligente Smart Watch M26 Touch </a> 
                     <!-- Reviews -->
@@ -480,7 +475,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-4.jpg" alt="" > <span class="new-tag">New</span>
+                  <article> <img class="img-responsive" src="/images/item-img-1-4.jpg" alt="" > <span class="new-tag">New</span>
                     
                     <!-- Content --> 
                     <span class="tag">Accessories</span> <a href="#." class="tittle">Teclado Inalambrico Bluetooth Con Air Mouse</a> 
@@ -492,7 +487,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-5.jpg" alt="" >
+                  <article> <img class="img-responsive" src="/images/item-img-1-5.jpg" alt="" >
                     <!-- Content --> 
                     <span class="tag">Appliances</span> <a href="#." class="tittle">Funda Para Ebook 7" 128GB full HD</a> 
                     <!-- Reviews -->
@@ -503,7 +498,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-6.jpg" alt="" > <span class="sale-tag">-25%</span>
+                  <article> <img class="img-responsive" src="/images/item-img-1-6.jpg" alt="" > <span class="sale-tag">-25%</span>
                     
                     <!-- Content --> 
                     <span class="tag">Tablets</span> <a href="#." class="tittle">Mp3 Sumergible Deportivo Slim Con 8GB</a> 
@@ -515,7 +510,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-7.jpg" alt="" >
+                  <article> <img class="img-responsive" src="/images/item-img-1-7.jpg" alt="" >
                     <!-- Content --> 
                     <span class="tag">Appliances</span> <a href="#." class="tittle">Reloj Inteligente Smart Watch M26 Touch </a> 
                     <!-- Reviews -->
@@ -526,7 +521,7 @@
                 
                 <!-- Product -->
                 <div class="product">
-                  <article> <img class="img-responsive" src="../../static/images/item-img-1-8.jpg" alt="" > <span class="new-tag">New</span>
+                  <article> <img class="img-responsive" src="/images/item-img-1-8.jpg" alt="" > <span class="new-tag">New</span>
                     
                     <!-- Content --> 
                     <span class="tag">Accessories</span> <a href="#." class="tittle">Teclado Inalambrico Bluetooth Con Air Mouse</a> 
@@ -555,7 +550,7 @@
         <div class="item-slide-5 with-nav"> 
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-1.jpg" alt="" >
+            <article> <img class="img-responsive" src="/images/item-img-1-1.jpg" alt="" >
               <!-- Content --> 
               <span class="tag">Latop</span> <a href="#." class="tittle">Laptop Alienware 15 i7 Perfect For Playing Game</a> 
               <!-- Reviews -->
@@ -565,7 +560,7 @@
           </div>
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-2.jpg" alt="" > <span class="sale-tag">-25%</span>
+            <article> <img class="img-responsive" src="/images/item-img-1-2.jpg" alt="" > <span class="sale-tag">-25%</span>
               
               <!-- Content --> 
               <span class="tag">Tablets</span> <a href="#." class="tittle">Mp3 Sumergible Deportivo Slim Con 8GB</a> 
@@ -577,7 +572,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-3.jpg" alt="" >
+            <article> <img class="img-responsive" src="/images/item-img-1-3.jpg" alt="" >
               <!-- Content --> 
               <span class="tag">Appliances</span> <a href="#." class="tittle">Reloj Inteligente Smart Watch M26 Touch Bluetooh </a> 
               <!-- Reviews -->
@@ -588,7 +583,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-4.jpg" alt="" > <span class="new-tag">New</span>
+            <article> <img class="img-responsive" src="/images/item-img-1-4.jpg" alt="" > <span class="new-tag">New</span>
               
               <!-- Content --> 
               <span class="tag">Accessories</span> <a href="#." class="tittle">Teclado Inalambrico Bluetooth Con Air Mouse</a> 
@@ -600,7 +595,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-5.jpg" alt="" >
+            <article> <img class="img-responsive" src="/images/item-img-1-5.jpg" alt="" >
               <!-- Content --> 
               <span class="tag">Appliances</span> <a href="#." class="tittle">Funda Para Ebook 7" 128GB full HD</a> 
               <!-- Reviews -->
@@ -611,7 +606,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-6.jpg" alt="" > <span class="sale-tag">-25%</span>
+            <article> <img class="img-responsive" src="/images/item-img-1-6.jpg" alt="" > <span class="sale-tag">-25%</span>
               
               <!-- Content --> 
               <span class="tag">Tablets</span> <a href="#." class="tittle">Mp3 Sumergible Deportivo Slim Con 8GB</a> 
@@ -623,7 +618,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-7.jpg" alt="" >
+            <article> <img class="img-responsive" src="/images/item-img-1-7.jpg" alt="" >
               <!-- Content --> 
               <span class="tag">Appliances</span> <a href="#." class="tittle">Reloj Inteligente Smart Watch M26 Touch Bluetooh </a> 
               <!-- Reviews -->
@@ -634,7 +629,7 @@
           
           <!-- Product -->
           <div class="product">
-            <article> <img class="img-responsive" src="../../static/images/item-img-1-8.jpg" alt="" > <span class="new-tag">New</span>
+            <article> <img class="img-responsive" src="/images/item-img-1-8.jpg" alt="" > <span class="new-tag">New</span>
               
               <!-- Content --> 
               <span class="tag">Accessories</span> <a href="#." class="tittle">Teclado Inalambrico Bluetooth Con Air Mouse</a> 
@@ -651,11 +646,11 @@
     <section class="light-gry-bg clients-img">
       <div class="container">
         <ul>
-          <li><img src="../../static/images/c-img-1.png" alt="" ></li>
-          <li><img src="../../static/images/c-img-2.png" alt="" ></li>
-          <li><img src="../../static/images/c-img-3.png" alt="" ></li>
-          <li><img src="../../static/images/c-img-4.png" alt="" ></li>
-          <li><img src="../../static/images/c-img-5.png" alt="" ></li>
+          <li><img src="/images/c-img-1.png" alt="" ></li>
+          <li><img src="/images/c-img-2.png" alt="" ></li>
+          <li><img src="/images/c-img-3.png" alt="" ></li>
+          <li><img src="/images/c-img-4.png" alt="" ></li>
+          <li><img src="/images/c-img-5.png" alt="" ></li>
         </ul>
       </div>
     </section>
@@ -758,7 +753,7 @@
         <div class="col-sm-6">
           <p>Copyright &copy; 2017.Company name All rights reserved.</p>
         </div>
-        <div class="col-sm-6 text-right"> <img src="../../static/images/card-icon.png" alt=""> </div>
+        <div class="col-sm-6 text-right"> <img src="/images/card-icon.png" alt=""> </div>
       </div>
     </div>
   </div>
@@ -772,18 +767,18 @@
 <!-- End Page Wrapper --> 
 
 <!-- JavaScripts --> 
-<script src="../../static/js/vendors/jquery/jquery.min.js"></script>
-<script src="../../static/js/vendors/wow.min.js"></script>
-<script src="../../static/js/vendors/bootstrap.min.js"></script>
-<script src="../../static/js/vendors/own-menu.js"></script>
-<script src="../../static/js/vendors/jquery.sticky.js"></script>
-<script src="../../static/js/vendors/owl.carousel.min.js"></script>
+<script src="/js/vendors/jquery/jquery.min.js"></script>
+<script src="/js/vendors/wow.min.js"></script>
+<script src="/js/vendors/bootstrap.min.js"></script>
+<script src="/js/vendors/own-menu.js"></script>
+<script src="/js/vendors/jquery.sticky.js"></script>
+<script src="/js/vendors/owl.carousel.min.js"></script>
 
 <!-- SLIDER REVOLUTION 4.x SCRIPTS  --> 
-<script type="text/javascript" src="../../static/rs-plugin/js/jquery.tp.t.min.js"></script>
-<script type="text/javascript" src="../../static/rs-plugin/js/jquery.tp.min.js"></script>
-<script src="../../static/js/main.js"></script>
-<script src="../../static/js/vendors/jquery.nouislider.min.js"></script>
+<script type="text/javascript" src="/rs-plugin/js/jquery.tp.t.min.js"></script>
+<script type="text/javascript" src="/rs-plugin/js/jquery.tp.min.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/vendors/jquery.nouislider.min.js"></script>
 <script>
 jQuery(document).ready(function($) {
   
