--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -354,8 +354,8 @@
                 
                 <!-- Nav tabs -->
                 <ul class="nav" role="tablist">
-                  <li role="presentation" class="active"><a href="#pro-detil"  role="tab" data-toggle="tab">Product Details</a></li>
-                  <li role="presentation"><a href="#cus-rev"  role="tab" data-toggle="tab">Customer Reviews</a></li>
+                  <li role="presentation" class="active"><a href="#pro-detil"  role="tab" data-toggle="tab">商品详情</a></li>
+                  <li role="presentation"><a href="#cus-rev"  role="tab" data-toggle="tab">用户评价</a></li>
                   <li role="presentation"><a href="#ship" role="tab" data-toggle="tab">Shipping & Payment</a></li>
                 </ul>
                 
@@ -435,7 +435,7 @@
             <section class="padding-top-30 padding-bottom-0"> 
               <!-- heading -->
               <div class="heading">
-                <h2>Related Products</h2>
+                <h2>相关商品</h2>
                 <hr>
               </div>
               <!-- Items Slider -->
