修改完善了Cart与Pay的部分功能

--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -6,6 +6,7 @@
   <title>支付</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
   <script src="/jquery/dist/jquery.js"></script>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/fontawesome-free/css/all.min.css">
@@ -447,7 +448,7 @@
               <!-- Table row -->
               <div class="row">
                 <div class="col-12 table-responsive">
-                  <table class="table table-striped">
+                  <table class="table table-striped" id="paytable">
                     <thead>
                     <tr>
                       <th>商品</th>
@@ -458,7 +459,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <!--<tr>
                       <td><a href="goods/details?id=1">
                         <img style="width:4vh;height: 4vh" src="/goods_pics/1-pic-1.jpg" class="product-image" alt="Product Image">
                         iPad Pro 2019</a></td>
@@ -484,7 +485,7 @@
                       <td>3.00</td>
                       <td>1</td>
                       <td>3.00</td>
-                    </tr>
+                    </tr>-->
                     </tbody>
                   </table>
                 </div>
@@ -528,7 +529,7 @@
                         <img  src="/img/yen-2x.png"><img> 平台余额
                         <p id="balance" class="float-right text-muted text-sm"></p>
                       </a>
-                      <a th:href="@{'/balancePay?total=123'}" class="dropdown-item">
+                      <a id="paya" href="" class="dropdown-item">
                         <img  src="/img/blank.png"><img>
                         <span  class="float-right text-muted text-sm">结算</span>
                       </a>
@@ -539,11 +540,11 @@
                 <!-- /.col -->
                 <div class="col-6">
                   <div class="table-responsive">
-                    <table class="table">
-                      <tr>
+                    <table class="table" id="totaltable">
+                      <!--<tr>
                         <th>总计:</th>
                         <td>123.0</td>
-                      </tr>
+                      </tr>-->
                     </table>
                   </div>
                 </div>
@@ -570,8 +571,10 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="/PayJs/Balance.js"></script>
+
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
+<script src="/PayJs/Balance.js"></script>
+<script src="/PayJs/PayOneJs.js"></script>
 <!-- Select2 -->
 <script src="/AdminLTE-3.0.5/plugins/select2/js/select2.full.min.js"></script>
 <!-- Bootstrap4 Duallistbox -->
