现在可修改用户头像

--- a/src/main/resources/templates/goods/details.html
+++ b/src/main/resources/templates/goods/details.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- SweetAlert2 -->
   <link rel="stylesheet" href="/AdminLTE-3.0.5/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
+
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- overlayScrollbars -->
@@ -20,7 +21,8 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="../https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   <link href="/icofont/icofont.min.css" rel="stylesheet">
-  <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/boxicons/css/boxicons.min.css" rel="s-tylesheet">
+  <script src="/js/jquery-3.1.1.js"></script>
 
 </head>
 <body class="hold-transition sidebar-collapse">
