--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -33,6 +33,7 @@
 
   <!-- JavaScripts -->
   <script src="/js/vendors/modernizr.js"></script>
+  <script src="/js/jquery-3.1.1.js"></script>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 
@@ -766,7 +767,8 @@
 </div>
 <!-- End Page Wrapper --> 
 
-<!-- JavaScripts --> 
+<!-- JavaScripts -->
+<script src="/MyInfoJs/GoodsHistory.js"></script>
 <script src="/js/vendors/jquery/jquery.min.js"></script>
 <script src="/js/vendors/wow.min.js"></script>
 <script src="/js/vendors/bootstrap.min.js"></script>
