--- a/src/main/resources/templates/user/ViewHistory.html
+++ b/src/main/resources/templates/user/ViewHistory.html
@@ -298,13 +298,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>我的收货地址</h1>
-                    </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">个人中心</a></li>
-                            <li class="breadcrumb-item active">地址管理</li>
-                        </ol>
+                        <h1>购物车</h1>
                     </div>
                 </div>
             </div><!-- /.container-fluid -->
@@ -312,43 +306,98 @@
 
         <!-- Main content -->
         <section class="content">
-            <div class="container-fluid">
 
-                <!-- SELECT2 EXAMPLE -->
-                <div class="card card-default" id="address">
-                    <div class="card-header">
-                        <div class="card-body">
-                            <input id="newAddress" class="form-control" placeholder="请输入要添加的地址">
-                        </div>
-                        <div class="card-body">
-                        <input id="newPhoneNumber" class="form-control" placeholder="请输入收件人的手机号码">
-                        </div>
-                        <div class="card-body">
-                            <input id="newPeople" class="form-control" placeholder="请输入收件人姓名">
-                        </div>
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-info" id="addAddress" onclick="AddAddress()">添加</button>
-                            </button>
-                        </div>
-                        <div class="card-body" style="margin-top: 2%">
-                            <input id="deleteInput" class="form-control" placeholder="请输入要删除的地址id">
-                        </div>
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-info" id="deleteAddress" onclick="DeleteAddress()">删除</button>
-                            </button>
-                        </div>
-                    </div>
-                    <!-- /.card-header -->
-
-
-                    <!-- /.card-body -->
-                    <div class="card-footer">
-                        <!--Visit <a href="https://select2.github.io/">Select2 documentation</a> for more examples and information about-->
-                        <!--the plugin.-->
-                    </div>
+            <!-- Default box -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">已选择的商品</h3>
                 </div>
+                <div class="card-body p-0">
+                    <table class="table table-striped projects" id="cartTable">
+                        <thead>
+                        <tr>
+                            <th style="width: 1%">
+                                <div class="icheck-primary">
+                                    <input type="checkbox" value="" id="check0" onclick="SelectAll(this)">
+                                    <label for="check0"></label>
+                                </div>
+                            </th>
+                            <th style="width: 20%">
+                                商 品
+                            </th>
+                            <th style="width: 30%">
+                                规 格
+                            </th>
+                            <th>
+                                数 量
+                            </th>
+                            <th style="width: 8%" class="text-center">
+                                状 态
+                            </th>
+                            <th style="width: 8%">
+                                单 价
+                            </th>
+                            <th style="width: 20%"class="project-actions text-right">
+                                <a class="btn btn-warning  btn-sm" href="/pay">
+                                    <img  src="/img/yen-2x.png"><img>
+                                    结算
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="#">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                    删除
+                                </a>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <!--<tr>
+                            <td>
+                                <div class="icheck-primary">
+                                    <input type="checkbox" value="" id="check1">
+                                    <label for="check1"></label>
+                                </div>
+                            </td>
+                            <td>
+                                <a href="goods/details">
+                                    <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                                    iPad pro</a>
+                            </td>
+                            <td>
+                            256G
+                            </td>
+                            <td class="project_progress">
+                                <div style="width: 160px">
+                                    <input style="width: 50px; height: 38px; border: 2px white; float: left;" type="button" value="-" onclick="reductionOf(this)" />
+                                    <input style="text-align: center; width: 50px; height: 32px; float: left;" type="text" value="1" onblur="checkNumber(this)" />
+                                    <input style="width: 50px; height: 38px; border: 2px white;" type="button" value="+" onclick="add(this)" />
+                                </div>
+                            </td>
+                            <td class="project-state">
+                                <span class="badge badge-success">Success</span>
+                            </td>
+                            <td >
+                                1234.0
+                            </td>
+                            <td class="project-actions text-right">
+                                <a class="btn btn-warning  btn-sm" href="#">
+                                    <img  src="/img/yen-2x.png"><img>
+                                    结算
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="#">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                    删除
+                                </a>
+                            </td>
+                        </tr>-->
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.card-body -->
+            </div>
+            <!-- /.card -->
 
-            </div><!-- /.container-fluid -->
         </section>
         <!-- /.content -->
     </div>
