--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -264,7 +264,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="" class="nav-link">
+                        <a href="/user/viewhistory" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 浏览记录
