网站主页大升级

--- a/src/main/resources/templates/product_details.html
+++ b/src/main/resources/templates/product_details.html
@@ -13,7 +13,8 @@
   <!-- Title  -->
   <!-- Favicon  -->
   <link rel="icon" href="/img/core-img/favicon.ico">
-
+  <link href="/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
   <!-- Document Title -->
   <title>Home</title>
 
@@ -337,16 +338,25 @@
                       </div>
                     </div>
                     <!-- Compare Wishlist -->
-                    <ul class="cmp-list">
-                      <li><a href="#."><i class="fa fa-heart"></i> Add to Wishlist</a></li>
-                      <li><a href="#."><i class="fa fa-navicon"></i> Add to Compare</a></li>
-                      <li><a href="#."><i class="fa fa-envelope"></i> Email to a friend</a></li>
-                    </ul>
+
                     <!-- Quinty -->
-                    <div class="quinty">
+                    <div class="row" style="margin-top: 100px">
+                    <div class="quinty col-sm-6">
                       <input type="number" value="01">
+
                     </div>
-                    <a href="#." class="btn-round"><i class="icon-basket-loaded margin-right-5"></i>加入购物车</a> </div>
+                      <div class="col-sm-4" style="display:inline-block;">
+
+                        <a href="#." class="btn-round"><i class="icon-basket-loaded margin-right-5"></i>加入购物车</a>
+                      </div>
+                    <div class="col-sm-4" style="display:inline-block;">
+
+                      <a href="#." class="btn-round"><i class="icofont-pay margin-right-5"></i>立即购买</a>
+                    </div>
+
+
+                  </div>
+
                 </div>
               </div>
               
@@ -357,7 +367,6 @@
                 <ul class="nav" role="tablist">
                   <li role="presentation" class="active"><a href="#pro-detil"  role="tab" data-toggle="tab">商品详情</a></li>
                   <li role="presentation"><a href="#cus-rev"  role="tab" data-toggle="tab">用户评价</a></li>
-                  <li role="presentation"><a href="#ship" role="tab" data-toggle="tab">Shipping & Payment</a></li>
                 </ul>
                 
                 <!-- Tab panes -->
