--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -323,7 +323,7 @@
                                      data-elementdelay="0.03" 
                                      data-endelementdelay="0.1" 
                                      data-endspeed="300" 
-                                     style="z-index: 6; font-size:50px; color:#0088cc; font-weight:800; white-space: nowrap;">男装->配饰 </div>
+                                     style="z-index: 6; font-size:50px; color:#0088cb; font-weight:800; white-space: nowrap;">男装->配饰 </div>
                     
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption sfl tp-resizeme" 
