--- a/src/main/resources/templates/user/ViewHistory.html
+++ b/src/main/resources/templates/user/ViewHistory.html
@@ -420,7 +420,7 @@
 
 <!-- jQuery -->
 <script src="/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"></script>
-<script src="/MyInfoJs/AddressJs.js"></script>
+<script src="/MyInfoJs/BrowsingRecords.js"></script>
 <!-- Bootstrap 4 -->
 <script src="/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Select2 -->
