修改完善了Cart与Pay的部分功能

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -513,10 +513,14 @@
             $(obj).next().val(1);
         }
         else {
-            $(obj).next().val(parseInt($(obj).next().val()) - 1);
-            //数值减
-            $(obj).next().val($(obj).next().val());
-            //赋值给框
+            if($(obj).next().val()==0) {
+                $(obj).next().val(0)
+            }else {
+                $(obj).next().val(parseInt($(obj).next().val()) - 1);
+                //数值减
+                $(obj).next().val($(obj).next().val());
+                //赋值给框
+            }
         }
     };
     //加数量
