搜索功能+搜索页面优化v2

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -119,7 +119,7 @@
             <option value="女装"> 女装</option>
             <option value="3C"> 数码3C</option>
           </select>
-          <input type="search" name="search_key" placeholder="在此输入你想要的商品">
+          <input type="search" name="search_key" placeholder="在此输入你想要的商品"/>
           <button class="submit" type="submit"><i class="icon-magnifier"></i></button>
         </form>
       </div>
