1.完善了地址管理模块 2.完善了订单管理模块 3.完成浏览记录查看模块

--- a/src/main/resources/templates/user/CheckOrder.html
+++ b/src/main/resources/templates/user/CheckOrder.html
@@ -312,25 +312,61 @@
 
         <!-- Main content -->
         <section class="content">
-            <div class="container-fluid">
 
-                <!-- SELECT2 EXAMPLE -->
-                <div class="card card-default" id="address">
-                    <div class="card-header">
-                        <div class="card-tools">
-                        </div>
-                    </div>
-                    <!-- /.card-header -->
-
-
-                    <!-- /.card-body -->
-                    <div class="card-footer">
-                        <!--Visit <a href="https://select2.github.io/">Select2 documentation</a> for more examples and information about-->
-                        <!--the plugin.-->
-                    </div>
+            <!-- Default box -->
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">我的浏览记录</h3>
                 </div>
+                <div class="card-body p-0">
+                    <table class="table table-striped projects" id="orderTable">
+                        <thead>
+                        <tr>
+                            <th style="width: 10%">
+                                订单号
+                            </th>
+                            <th style="width: 10%">
+                                商品名
+                            </th>
+                            <th style="width: 10%">
+                                单 价
+                            </th>
+                            <th style="width: 10%">
+                                数 量
+                            </th>
+                            <th style="width: 10%">
+                                总 额
+                            </th>
+                            <th style="width: 10%">
+                                买 家
+                            </th>
+                            <th style="width: 10%">
+                                卖 家
+                            </th>
+                            <th style="width: 10%">
+                                当前所在
+                            </th>
+                            <th style="width: 10%">
+                                配送状态
+                            </th>
+                            <!--<th style="width: 20%"class="project-actions text-right">-->
+                                <!--<a class="btn btn-danger btn-sm" href="/Records/deleteall">-->
+                                    <!--<i class="fas fa-trash">-->
+                                    <!--</i>-->
+                                    <!--删除全部-->
+                                <!--</a>-->
+                            <!--</th>-->
+                        </tr>
+                        </thead>
+                        <tbody>
 
-            </div><!-- /.container-fluid -->
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.card-body -->
+            </div>
+            <!-- /.card -->
+
         </section>
         <!-- /.content -->
     </div>
