--- a/src/main/resources/templates/user/AddressManage.html
+++ b/src/main/resources/templates/user/AddressManage.html
@@ -321,20 +321,13 @@
                             <input id="newAddress" class="form-control" placeholder="请输入要添加的地址">
                         </div>
                         <div class="card-body">
-                        <input id="newPhoneNumber" class="form-control" placeholder="请输入收件人的手机号码">
+                        <input id="newPhoneNumber" class="form-control" placeholder="请输入收件人的手机号码" oninput="checkInput()">
                         </div>
                         <div class="card-body">
                             <input id="newPeople" class="form-control" placeholder="请输入收件人姓名">
                         </div>
                         <div class="card-tools">
                             <button type="button" class="btn btn-info" id="addAddress" onclick="AddAddress()">添加</button>
-                            </button>
-                        </div>
-                        <div class="card-body" style="margin-top: 2%">
-                            <input id="deleteInput" class="form-control" placeholder="请输入要删除的地址id">
-                        </div>
-                        <div class="card-tools">
-                            <button type="button" class="btn btn-info" id="deleteAddress" onclick="DeleteAddress()">删除</button>
                             </button>
                         </div>
                     </div>
@@ -346,6 +339,76 @@
                         <!--Visit <a href="https://select2.github.io/">Select2 documentation</a> for more examples and information about-->
                         <!--the plugin.-->
                     </div>
+                    <section class="content">
+
+                        <!-- Default box -->
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="card-title">我的地址</h3>
+                            </div>
+                            <div class="card-body p-0">
+                                <table class="table table-striped projects" id="addressTable">
+                                    <thead>
+                                        <th style="width: 50%">
+                                            收货地址
+                                        </th>
+                                        <th style="width: 20%">
+                                            收件人
+                                        </th>
+                                        <th style="width: 20%;">
+                                            手机号
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <!--<tr>
+                                        <td>
+                                            <div class="icheck-primary">
+                                                <input type="checkbox" value="" id="check1">
+                                                <label for="check1"></label>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <a href="goods/details">
+                                                <img style="width:4vh;height: 4vh" src="/AdminLTE-3.0.5/dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+                                                iPad pro</a>
+                                        </td>
+                                        <td>
+                                        256G
+                                        </td>
+                                        <td class="project_progress">
+                                            <div style="width: 160px">
+                                                <input style="width: 50px; height: 38px; border: 2px white; float: left;" type="button" value="-" onclick="reductionOf(this)" />
+                                                <input style="text-align: center; width: 50px; height: 32px; float: left;" type="text" value="1" onblur="checkNumber(this)" />
+                                                <input style="width: 50px; height: 38px; border: 2px white;" type="button" value="+" onclick="add(this)" />
+                                            </div>
+                                        </td>
+                                        <td class="project-state">
+                                            <span class="badge badge-success">Success</span>
+                                        </td>
+                                        <td >
+                                            1234.0
+                                        </td>
+                                        <td class="project-actions text-right">
+                                            <a class="btn btn-warning  btn-sm" href="#">
+                                                <img  src="/img/yen-2x.png"><img>
+                                                结算
+                                            </a>
+                                            <a class="btn btn-danger btn-sm" href="#">
+                                                <i class="fas fa-trash">
+                                                </i>
+                                                删除
+                                            </a>
+                                        </td>
+                                    </tr>-->
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.card-body -->
+                        </div>
+                        <!-- /.card -->
+
+                    </section>
                 </div>
 
             </div><!-- /.container-fluid -->
