--- a/src/main/resources/templates/user/ViewHistory.html
+++ b/src/main/resources/templates/user/ViewHistory.html
@@ -298,7 +298,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>购物车</h1>
+                        <h1>浏览记录</h1>
                     </div>
                 </div>
             </div><!-- /.container-fluid -->
@@ -310,42 +310,29 @@
             <!-- Default box -->
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">已选择的商品</h3>
+                    <h3 class="card-title">我的浏览记录</h3>
                 </div>
                 <div class="card-body p-0">
-                    <table class="table table-striped projects" id="cartTable">
+                    <table class="table table-striped projects" id="historyTable">
                         <thead>
                         <tr>
-                            <th style="width: 1%">
-                                <div class="icheck-primary">
-                                    <input type="checkbox" value="" id="check0" onclick="SelectAll(this)">
-                                    <label for="check0"></label>
-                                </div>
-                            </th>
                             <th style="width: 20%">
                                 商 品
                             </th>
-                            <th style="width: 30%">
-                                规 格
+                            <th style="width: 20%">
+                                描 述
                             </th>
-                            <th>
-                                数 量
+                            <th style="width: 20%">
+                                标 签
                             </th>
-                            <th style="width: 8%" class="text-center">
-                                状 态
-                            </th>
-                            <th style="width: 8%">
-                                单 价
+                            <th style="width: 20%">
+                                价 格
                             </th>
                             <th style="width: 20%"class="project-actions text-right">
-                                <a class="btn btn-warning  btn-sm" href="/pay">
-                                    <img  src="/img/yen-2x.png"><img>
-                                    结算
-                                </a>
-                                <a class="btn btn-danger btn-sm" href="#">
+                                <a class="btn btn-danger btn-sm" href="/Records/deleteall">
                                     <i class="fas fa-trash">
                                     </i>
-                                    删除
+                                    删除全部
                                 </a>
                             </th>
                         </tr>
