找不到商品时，为用户推荐同类商品

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -173,7 +173,7 @@
                                         <div class="position-center-center">
                                             <div class="price"><p class="title fl" th:text="'¥'+${sc.goodsPrice}"></p></div>
                                             <p>Availability: <span class="in-stock">In stock</span></p>
-                                            <a href="#." class="btn-round"><i class="icon-basket-loaded"></i> Add to Cart</a> </div>
+                                            <a href="#." class="btn-round"><i class="icon-basket-loaded"></i> 加入到购物车</a> </div>
                                     </div>
                                 </div>
                             </div>
